Refactor the augmenter to searche data from the ElasticSearch service directly